@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: scip.c,v 1.721 2011/01/13 14:47:21 bzfberth Exp $"
+#pragma ident "@(#) $Id: scip.c,v 1.722 2011/01/18 18:42:59 bzfberth Exp $"
 
 /**@file   scip.c
  * @brief  SCIP callable library
@@ -16390,12 +16390,14 @@ SCIP_Real SCIPgetBranchingPoint(
 SCIP_Real SCIPcalcNodeselPriority(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_VAR*             var,                /**< variable on which the branching is applied */
+   SCIP_BRANCHDIR        branchdir,          /**< type of branching that was performed: upwards, downwards, or fixed 
+                                              * fixed should only be used, when both bounds changed */
    SCIP_Real             targetvalue         /**< new value of the variable in the child node */
    )
 {
    SCIP_CALL_ABORT( checkStage(scip, "SCIPcalcNodeselPriority", FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, TRUE, FALSE, FALSE, FALSE) );
 
-   return SCIPtreeCalcNodeselPriority(scip->tree, scip->set, scip->stat, var, targetvalue);
+   return SCIPtreeCalcNodeselPriority(scip->tree, scip->set, scip->stat, var, branchdir, targetvalue);
 }
 
 /** calculates an estimate for the objective of the best feasible solution contained in the subtree after applying the given
