@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: tree.c,v 1.254 2011/01/02 11:10:41 bzfheinz Exp $"
+#pragma ident "@(#) $Id: tree.c,v 1.255 2011/01/18 18:42:59 bzfberth Exp $"
 
 /**@file   tree.c
  * @brief  methods for branch and bound tree
@@ -4389,6 +4389,9 @@ SCIP_Real SCIPtreeCalcNodeselPriority(
    SCIP_SET*             set,                /**< global SCIP settings */
    SCIP_STAT*            stat,               /**< dynamic problem statistics */
    SCIP_VAR*             var,                /**< variable, of which the branching factor should be applied, or NULL */
+   SCIP_BRANCHDIR        branchdir,          /**< type of branching that was performed: upwards, downwards, or fixed 
+                                              * fixed should only be used, when both bounds changed 
+                                              */
    SCIP_Real             targetvalue         /**< new value of the variable in the child node */
    )
 {
@@ -4410,9 +4413,9 @@ SCIP_Real SCIPtreeCalcNodeselPriority(
    downinfs = SCIPvarGetAvgInferences(var, stat, SCIP_BRANCHDIR_DOWNWARDS);
    upinfs = SCIPvarGetAvgInferences(var, stat, SCIP_BRANCHDIR_UPWARDS);
 
-   if( SCIPsetIsLT(set, targetvalue, varsol) )
+   switch( branchdir )
    {
-      /* the branch is directed downwards */
+   case SCIP_BRANCHDIR_DOWNWARDS:
       switch( SCIPvarGetBranchDirection(var) )
       {
       case SCIP_BRANCHDIR_DOWNWARDS:
@@ -4459,9 +4462,8 @@ SCIP_Real SCIPtreeCalcNodeselPriority(
          prio = 0.0;
          break;
       }
-   }
-   else if( SCIPsetIsGT(set, targetvalue, varsol) )
-   {
+      break;
+   case SCIP_BRANCHDIR_UPWARDS:
       /* the branch is directed upwards */
       switch( SCIPvarGetBranchDirection(var) )
       {
@@ -4514,11 +4516,15 @@ SCIP_Real SCIPtreeCalcNodeselPriority(
          prio = 0.0;
          break;
       }
-   }
-   else
-   {
-      /* the branch does not alter the value of the variable */
+      break;
+   case SCIP_BRANCHDIR_FIXED:
       prio = SCIPsetInfinity(set);
+      break;
+   default:
+      SCIPerrorMessage("invalid branching direction <%d> of variable <%s>\n", 
+         SCIPvarGetBranchDirection(var), SCIPvarGetName(var));
+      prio = 0.0;
+      break;
    }
 
    return prio;
@@ -4821,7 +4827,7 @@ SCIP_RETCODE SCIPtreeBranchVar(
    if( downub != SCIP_INVALID )    /*lint !e777*/
    {
       /* create child node x <= downub */
-      priority = SCIPtreeCalcNodeselPriority(tree, set, stat, var, downub);
+      priority = SCIPtreeCalcNodeselPriority(tree, set, stat, var, SCIP_BRANCHDIR_DOWNWARDS, downub);
       /* if LP solution is cutoff in child, compute a new estimate
        * otherwise we cannot expect a direct change in the best solution, so we keep the estimate of the parent node */
       if( SCIPsetIsGT(set, lpval, downub) )
@@ -4840,7 +4846,7 @@ SCIP_RETCODE SCIPtreeBranchVar(
    if( fixval != SCIP_INVALID )    /*lint !e777*/
    {
       /* create child node with x = fixval */
-      priority = SCIPtreeCalcNodeselPriority(tree, set, stat, var, fixval);
+      priority = SCIPtreeCalcNodeselPriority(tree, set, stat, var, SCIP_BRANCHDIR_FIXED, fixval);
       estimate = SCIPtreeCalcChildEstimate(tree, set, stat, var, fixval);
       SCIPdebugMessage(" -> creating child: <%s> == %g (priority: %g, estimate: %g)\n",
          SCIPvarGetName(var), fixval, priority, estimate);
@@ -4862,7 +4868,7 @@ SCIP_RETCODE SCIPtreeBranchVar(
    if( uplb != SCIP_INVALID )    /*lint !e777*/
    {
       /* create child node with x >= uplb */
-      priority = SCIPtreeCalcNodeselPriority(tree, set, stat, var, uplb);
+      priority = SCIPtreeCalcNodeselPriority(tree, set, stat, var, SCIP_BRANCHDIR_UPWARDS, uplb);
       if( SCIPsetIsLT(set, lpval, uplb) )
          estimate = SCIPtreeCalcChildEstimate(tree, set, stat, var, uplb);
       else
